--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -41,7 +41,7 @@
   .image-wrapper {
     width: 50%;
     display: flex;
-    align-items: center;
+    align-items: top;
     justify-content: center;
     overflow: hidden;
     @include media(">=phone", "<lgphone") {
