--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -7,8 +7,35 @@
   .name {
     font-weight: 600;
   }
+  .home {
+    text-decoration: none;
+    padding: 10px;
+    font-family: "Open Sans";
+    background-color: transparent;
+    outline: none;
+    border: 0px;
+    cursor: pointer;
+  }
+  .active {
+    color: black;
+  }
   .links-wrapper {
     button {
+      text-decoration: none;
+      padding: 10px;
+      font-family: "Open Sans";
+      opacity: 0.6;
+      transition: all 0.2s ease-in-out;
+      font-size: 12px;
+      background-color: transparent;
+      outline: none;
+      border: 0px;
+      cursor: pointer;
+      &:hover {
+        opacity: 1;
+      }
+    }
+    .link {
       text-decoration: none;
       padding: 10px;
       font-family: "Open Sans";
