--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -22,14 +22,13 @@
     h1 {
       font-size: 4rem;
       text-align: center;
-      line-height: 20px;
       @include media(">=phone", "<lgphone") {
         font-size: 1.5rem;
-        line-height: 10px;
+        // line-height: 15px;
       }
       @include media(">=lgphone", "<tablet") {
         font-size: 1.5rem;
-        line-height: 10px;
+        // line-height: 15px;
       }
       @include media(">=tablet", "<desktop") {
         font-size: 2.5rem;
