--- a/src/styles/skills.scss
+++ b/src/styles/skills.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
   h1 {
     font-size: 3rem;
     line-height: 20px;
@@ -14,25 +15,44 @@
     grid-template-columns: repeat(3, 1fr);
     margin-top: 50px;
     grid-gap: 20px;
+
     @include media(">=phone", "<lgphone") {
       grid-template-columns: 1fr;
     }
+
     @include media(">=lgphone", "<tablet") {
       grid-template-columns: 1fr;
     }
+
     @include media(">=tablet", "<desktop") {
       grid-template-columns: 1fr 1fr;
     }
+
     .skill {
       display: flex;
       flex-direction: column;
       align-items: center;
       text-align: center;
+
       img {
         height: 3rem;
       }
+
       p {
         font-size: 14px;
+      }
+
+      .beginner {
+        color: rgb(61, 144, 61);
+      }
+      .intermediate {
+        color: rgb(239, 103, 49);
+      }
+      .advanced {
+        color: darkred;
+      }
+      .expert {
+        color: purple;
       }
     }
   }
