--- a/src/styles/blog-post.scss
+++ b/src/styles/blog-post.scss
@@ -68,6 +68,7 @@ html {
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        max-width: 900px;
 
         h1 {
             align-items: center;
