--- a/src/styles/syntax.scss
+++ b/src/styles/syntax.scss
@@ -71,3 +71,7 @@
 // .highlight .vi { color: #f2777a } /* Name.Variable.Instance */
 // .highlight .vm { color: #f2777a } /* Name.Variable.Magic */
 // .highlight .il { color: #f99157 } /* Literal.Number.Integer.Long */
+
+.gatsby-highlight pre[class*="language-"] {
+    font-size: 0.9em;
+}
